--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ main {
   margin: 20px;
 }
 #cards .card {
-  width: 350px;
+  width: 285px;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid rgba(192, 192, 192, 0.445);
@@ -80,8 +80,8 @@ a {
 .date {
   position: relative;
   width: 175px;
-  margin: 50px 20px;
   height: 20px;
+  margin:50px auto;
 }
 #min,
 #max {
@@ -107,7 +107,7 @@ a {
   bottom: 0;
   margin: auto;
   width: 100%;
-  background-color: white;
+  background-color: rgb(224, 224, 224);
 }
 
 #current_min_date {
@@ -123,11 +123,13 @@ a {
 }
 .search {
   background-color: white;
+  border:1px solid rgb(226, 226, 226);
   display: flex;
   padding: 10px;
   max-width: 500px;
   border-radius: 2px;
   transition: all .3s;
+  margin:auto;
 }
 .search input {
   border-radius: 2px;
@@ -144,4 +146,32 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+
+.pagination_buttons{
+  display:flex;
+  justify-content: center;
+  color:white;
+  border:1px solid rgba(156, 156, 156, 0.233);
+  border-right: 0;
+  border-left: 0;
+  padding:10px;
+  margin:30px 0;
+}
+.pagination_buttons .page_button{
+  padding:10px 20px;
+  border:1px solid rgba(117, 117, 117, 0.37);
+  margin:10px;
+  cursor: pointer;
+  background-color:  rgb(255, 255, 255);
+  color:black;
+ transition: all .2s;
+}
+.page_button:hover{
+  background-color:  rgb(209, 209, 209);
+}
+
+.pagination_buttons .active_page{
+  background-color:  rgb(209, 209, 209);
 }
